--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=905958098244-epkkl5pr76jmptnu0vr6s28uajphg70t.apps.googleusercontent.com
+REACT_APP_BASE_NAME=ac-review-system-ui
