--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID=905958098244-epkkl5pr76jmptnu0vr6s28uajphg70t.apps.googleusercontent.com
 REACT_APP_BASE_NAME=ac-review-system-ui
-PUBLIC_URL=https://bytebard-turing.github.io/ac-review-system-ui
+REACT_APP_PUBLIC_URL=https://bytebard-turing.github.io/ac-review-system-ui
