--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^5.13.6",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.9.1",
@@ -20,6 +21,8 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "google-auth-library": "^9.10.0",
+    "json-edit-react": "^1.10.2",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -59,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-virtualized": "^9.21.30",
